mirage_site/static/mirage_site/css/layouts/blog.css
/* ... */
/* Pool Detail Styles */
.pooldetail {
    margin:0px;padding:0px;
    width:100%;
    border:1px solid #e5e5e5;
    margin-top:25px;

}.pooldetail table{
    border-collapse: collapse;
        border-spacing: 0;
    width:100%;
    height:100%;
    margin:0px;padding:0px;

}.pooldetail tr:hover td{
    background-color:#eeeeee;
}
.pooldetail td{
    vertical-align:middle;
    background-color:#ffffff;
    border:1px solid #e5e5e5;
    border-width:0px 1px 1px 0px;
    text-align:center;
    padding:7px;
    font-size:.8em;
    font-family:;
    font-weight:normal;
    color:#000000;
}.pooldetail tr:last-child td{
    border-width:0px 1px 0px 0px;
}.pooldetail tr td:last-child{
    border-width:0px 0px 1px 0px;
}.pooldetail tr:last-child td:last-child{
    border-width:0px 0px 0px 0px;
}
.pooldetail tr:first-child td{
    background-color:#aaaaaa;
    border:0px solid #e5e5e5;
    text-align:center;
    border-width:0px 0px 1px 1px;
    font-size:1em;
    font-family:;
    font-weight:600;
    color:#ffffff;
}
.pooldetail tr:first-child:hover td{
    background-color:#aaaaaa;
}
.pooldetail tr:first-child td:first-child{
    border-width:0px 0px 1px 0px;
}
.pooldetail tr:first-child td:last-child{
    border-width:0px 0px 1px 1px;
}
#pool_table {
    display:none;
}
#pool_table .h_vendor_name {
    text-align: left;
}
#pool_table .h_naics_results {
    text-align: left;
}
#pool_table .vendor_name {
    text-align: left;
}
#pool_table .h_vendor_location {
    text-align: left;
}
#pool_table .vendor_location {
    text-align: left;
}
#pool_table .pooldetail .vendor_name tr:hover td{
    background-color:#eeeeee;
}
.pure-checkbox  {
    padding-bottom:3px;
}
/* Vendor Detail Styles */
#breadcrumb_container   {
    border-top:1px solid #e3e5e9;
    border-bottom:1px solid #e3e5e9;
}
#vendor_main_container  {
    float:left;
    width:1100px;
    overflow: ;
    padding-left:15px;
}
#vendor_title_status_container  {
    width:100%;
    border-bottom:1px solid #DDDDDD;
    height:33px;
    background-color: ;
    margin-top:15px;
}
.vendor_title{
    font-size: 1.6em;
    float:left;
    font-weight:600;
}
.vendor_website   {
    float:left;
    margin-left:10px;
    padding-right:8px;
    padding-top:10px;
    background:url(/static/mirage_site/images/external_link.png);
    background-repeat: no-repeat;
    background-position: 64px 14px;
    height:35px;
    width:80px;
    vertical-align: text-bottom;
    color:#83b1d6;
}
.debarred_status    {
    display:none;
    font-size:1.6em;
    float:left;
    margin-left:10px;
    font-weight: 600;
    color:#d60006;
}
#vendor_admin_container {
    width:100%;
    margin-top:10px;
    min-height:140px;
}
#vendor_admin_c1    {
    width:340px;
    float:left;
    min-height:90px;
}
#download_data  {
    width: 340px;
    min-height:20px;
    padding-left:23px;
    background:url(/static/mirage_site/images/download_icon.png);
    background-repeat: no-repeat;
    background-position: 0px 3px;
    margin-left:10px;
    margin-top:5px;
}
#download_data_results  {
    margin-top:-21px;
    min-height:20px;
    padding-left:23px;
    background:url(/static/mirage_site/images/download_icon.png);
    background-repeat: no-repeat;
    background-position: 0px 3px;
    float:right;
}
#vendor_sam_expiration_container    {
    font-size:.9em;
    padding-bottom:6px;
}
.vendor_sam_expiration_text {
   
}
.vendor_sam_expiration_date {
    color:#084b5a;
    font-weight:bold;
}
.vendor_sam_expiration_notice   {
    display: none;
    color:#d6000b;
    font-weight:bold;
}
#vendor_admin_c2    {
    min-width:260px;
    float:left;
    min-height:110px;
    margin-left:60px;
}
.admin_label    {
    display:inline-block;
}
.admin_data    {
    display:inline-block;
    font-weight:bold;
}
.admin_data2    {
    display:inline-block;
    
}
.lh{
    margin-bottom:0px;
    margin-top:0px;
}
.admin_title {
    margin:0em;
    font-size:1em;
    color:#8e919c;
}
#vendor_admin_c3    {
    min-width:300px;
    float:left;
    min-height:130px;
    margin-left:20px;
}
#sb_badge   {
    display: none;
    float:right;
}

#no_matching_contracts  {
    font-size: 1.5em;
    float:left;
    font-weight:600;
    margin-left:40px;
    font-style: italic;
    margin-top:5px;
    color:#666666;
    display: none;
}
#vendor_contract_history_container  {
    width:100%;
    min-height:100px;
    display:block;
    margin-top:20px;
}
#vendor_contract_history_title_container  {
    width:100%;
    display:block;
}
.vendor_contract_history_text {
    
    display:inline;
    font-size:1.4em;
}
.vendor_contract_history_naics {
    width:100%;
    display:inline;
    font-size:1.4em;
    font-weight:bold;
}
.contracts_button_active {
    display: inline-block;
    background: #e4e4e4;
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f6f6f6), color-stop(100%,#d7d7d7));
    background: -moz-linear-gradient(center top, #f6f6f6 0%, #d7d7d7 100%);
    -webkit-box-shadow: -1px 1px 0px 0px #dfdcdc inset, 1px -1px 0px 0px #bfbfbf inset;
    -moz-box-shadow: -1px 1px 0px 0px #dfdcdc inset, 1px -1px 0px 0px #bfbfbf inset;
    box-shadow: -1px 1px 0px 0px #dfdcdc inset, 1px -1px 0px 0px #bfbfbf inset;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    padding: 0px 10px;
    display: inline-block;
    font-family: arial;
    font-size: 14px;
    line-height: 30px;
    color: #595959;
    font-weight: bold;
    max-width:140px;
}
/* ... */

